[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Custom Hangman"
version = "0.0.1"
authors = [
  { name="Vinicius Koji Enari", email="viniciusenari@gmail.com" },
]
description = "A package to play a custom hangman game"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/viniciusenari/hangman-package"
